<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <Button
        android:id="@+id/New"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_button"
        android:layout_marginStart="102dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-smallcaps"
        android:background="@drawable/round"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/scorePanel"
        />
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_toEndOf="@+id/New"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@id/scorePanel"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:background="@drawable/round"
        />
    <TextView
        android:id="@+id/turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps"
        android:text="@string/ready"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="20dp"
        />
    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:layout_below="@id/reset"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginTop="10dp"
        />


    <RelativeLayout
        android:id="@+id/scorePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round"
        android:elevation="10dp">


        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/p1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190sp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/p2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/player1score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player1"
            android:layout_marginStart="80dp"
            android:text="@string/Null"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player2score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player2"
            android:layout_marginStart="180dp"
            android:layout_toEndOf="@id/player1score"
            android:text="@string/Null"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scorePanel"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"

        >


        <Button
            android:id="@+id/button_00"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:textSize="30sp"

            />

        <Button
            android:id="@+id/button_01"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_toEndOf="@id/button_00"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_02"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_toEndOf="@id/button_01"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_10"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_00"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_11"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_01"
            android:layout_toEndOf="@id/button_10"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_12"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_02"
            android:layout_toEndOf="@id/button_11"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_20"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_10"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_21"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_12"
            android:layout_toEndOf="@id/button_20"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_22"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/button_11"
            android:layout_toEndOf="@id/button_21"
            android:textSize="30sp"
            />


    </RelativeLayout>

</RelativeLayout>